Add more unit testing